# local-agent-ab-workbench

./: .gitignore  AGENTS.md  PLAN.md  README.md  TECH_STACK.md  pyproject.toml  sprint.md
.github/: PULL_REQUEST_TEMPLATE.md
docs/: INSPECT_ALIGNMENT.md  KNOWN_LIMITATIONS.md  PLAN.md  TECH_STACK.md  WORKFLOW.md
evals/: desktop_basics_eval.yaml  local_eval_set.yaml  mercor_apex_seed_eval.yaml
experiments/: demo_openclaw_adapter.yaml  demo_openclaw_prompt_ab.yaml
model_providers/: docker_model_runner.yaml  local_ollama.yaml
prompts/: baseline_openclaw.yaml  candidate_playground.yaml
sandbox_runs/: offline_docker_ab_plan.yaml
sandboxes/: local_workspace.yaml
scripts/: run_local_demo.py
src/agent_ab/: __init__.py  analysis.py  cli.py  config.py  eval_execution.py  eval_runner.py  guardrails.py  improvement.py  observability.py  (+9 more)
tests/: test_module10_openclaw_adapter.py  test_module11_guardrails.py  test_module12_reporting.py  test_module13_eval_core.py  test_module13_seed_generation.py  test_module14_eval_runner.py  test_module15_analysis_scanner.py  test_module16_sandbox_provider.py  test_module17_observability_gui.py  test_module18_regression_review_ui.py  test_module19_improvement_loop_ui.py  test_module1_schemas.py  test_module20_eval_execution.py  test_module21_offline_sandbox_contracts.py  test_module2_tasks.py  test_module3_traces.py  test_module4_runner.py  test_module5_server.py  test_module6_playground.py  test_module7_frontend.py  test_module8_trace_ui.py  test_module9_playground_ui.py  test_post_mvp_browser_ui.py
tests_tdd/: README.md
(+22 files in other folders)
